kubeflow/templates/admission-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: admission-webhook
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: admission-webhook
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        app: admission-webhook
    spec:
      containers:
      - image: docker.io/kubeflownotebookswg/poddefaults-webhook
        name: admission-webhook
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: webhook-cert
          readOnly: true
        ports:
        - name: https-webhook
          containerPort: 4443
      volumes:
      - name: webhook-cert
        secret:
          secretName: webhook-certs
      serviceAccountName: service-account
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
  namespace: kubeflow
webhooks:
- admissionReviewVersions:
    - v1beta1
    - v1
  clientConfig:
    caBundle: ""
    service:
      name: service
      namespace: kubeflow
      path: /apply-poddefault
  sideEffects: None
  failurePolicy: Fail
  name: $(podDefaultsDeploymentName).kubeflow.org
  namespaceSelector:
    matchLabels:
      app.kubernetes.io/part-of: kubeflow-profile
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: kubeflow
spec:
  ports:
  - name: https-webhook
    port: 443
    targetPort: https-webhook
